RESOLVED FIXED154699
RefCounter value changed callback should be called on all changes (not just zero edge).
https://bugs.webkit.org/show_bug.cgi?id=154699
Summary RefCounter value changed callback should be called on all changes (not just z...
Gavin Barraclough
Reported 2016-02-25 15:54:10 PST
.
Attachments
WIP (9.59 KB, patch)
2016-02-25 15:54 PST, Gavin Barraclough
no flags
Fix (13.77 KB, patch)
2016-02-25 16:25 PST, Gavin Barraclough
andersca: review+
Fix (18.25 KB, patch)
2016-02-25 17:58 PST, Gavin Barraclough
ggaren: review+
Gavin Barraclough
Comment 1 2016-02-25 15:54:51 PST
Gavin Barraclough
Comment 2 2016-02-25 16:25:53 PST
Anders Carlsson
Comment 3 2016-02-25 16:31:36 PST
Comment on attachment 272261 [details] Fix View in context: https://bugs.webkit.org/attachment.cgi?id=272261&action=review > Source/WTF/wtf/RefCounter.h:60 > + enum Event { Decrement, Increment }; I would use enum class here. > Source/WTF/wtf/RefCounter.h:61 > + using ValueChangeFunction = std::function<void(Event)>; Space after the return type. > Source/WTF/wtf/RefCounter.h:63 > + RefCounter(ValueChangeFunction = [](bool) { }); Maybe use nullptr here (and check m_valueChangeFunction)
Gavin Barraclough
Comment 4 2016-02-25 17:58:07 PST
WebKit Commit Bot
Comment 5 2016-02-25 17:59:16 PST
Attachment 272273 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/WebProcessPool.cpp:162: Code inside a namespace should not be indented. [whitespace/indent] [4] ERROR: Source/WebKit2/UIProcess/ProcessThrottler.cpp:39: Code inside a namespace should not be indented. [whitespace/indent] [4] ERROR: Source/WTF/wtf/RefCounter.h:61: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/platform/VNodeTracker.cpp:43: Code inside a namespace should not be indented. [whitespace/indent] [4] ERROR: Source/WebCore/platform/VNodeTracker.cpp:42: More than one command on the same line in if [whitespace/parens] [4] Total errors found: 5 in 14 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 6 2016-02-26 00:15:25 PST
Comment on attachment 272273 [details] Fix r=me
Gavin Barraclough
Comment 7 2016-02-26 10:20:12 PST
Transmitting file data .............. Committed revision 197178.
Note You need to log in before you can comment on or make changes to this bug.